<resources>
    <string name="app_name">ckl_challenge</string>

    <string name="title_activity_article_list">ArticleListActivity</string>
    <string name="title_activity_article">ArticleActivity</string>

    <string name="action_settings">Settings</string>
    <string name="main_article_list_label">Articles List</string>
    <string name="fetch_articles_label">Fetch Articles</string>

    <string name="sort_article_by_title">Sort by Title</string>
    <string name="sort_article_by_authors">Sort by Authors</string>
    <string name="sort_article_by_website">Sort by Website</string>
    <string name="sort_article_by_date">Sort by Date</string>

    <string name="fragment_title">Title</string>
    <string name="fragment_author">Author</string>
    <string name="fragment_website">Website</string>
    <string name="fragment_date">Date</string>
    <string name="fragment_content">Content</string>
    <string name="fragment_readed">Readed</string>

    <string name="fetch_article_warning_message">There are no Articles</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
