<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools" >

    <item android:id="@+id/fetch_articles"
          android:title="@string/fetch_articles_label"
          app:showAsAction="always"/>

    <item android:id="@+id/sort_title"
          android:title="@string/sort_article_by_title"
          app:showAsAction="never"/>

    <item android:id="@+id/sort_authors"
          android:title="@string/sort_article_by_authors"
          android:orderInCategory="100"
          app:showAsAction="never"/>

    <item android:id="@+id/sort_websites"
          android:title="@string/sort_article_by_website"
          app:showAsAction="never"/>

    <item android:id="@+id/sort_dates"
          android:title="@string/sort_article_by_date"
          app:showAsAction="never"/>
</menu>